<resources>
    <string name="app_name">Practice Health</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="practice_status">Practice Health</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="desc"/>
    <string name="new_practices">New Practices</string>
    <string name="dummy">Yasir Asad Practice test test test test test</string>
    <string name="_50_remaining">50% Remaining</string>
    <string name="credentialing">Credentialing</string>
    <string name="stable_practice">Stable Practices</string>
    <string name="follow_up">Follow Up</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="add_note">Add note</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
        been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="no_internet">No internet connection</string>
    <string name="error_occurred">Error occurred</string>
    <string name="incorrect_username_pin">Incorrect username or pin</string>
    <string name="level">Level 1</string>
    <string name="full_name">Full Name</string>
    <string name="text">Text</string>
    <string name="weight">Weight</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_enter_sub_level_name">Please enter sublevel name</string>
    <string name="please_enter_weightage">Please enter sublevel weight</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_pin">Please enter pin</string>
    <string name="no_record_found">No record found</string>
    <string name="level_1">Level 1</string>
    <string name="_23">23</string>
    <string name="add_level">Add level Item</string>
    <string name="_73_remaining">73% Remaining</string>
    <string name="do_you_want_to_delete_it">Do you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="there_is_no_attachment_attached_to_this_item">There is no attachment attached to this item</string>
    <string name="add_desc">Add description</string>

</resources>
