<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:background="@color/white"
android:id="@+id/clSubItemDetailsDialog"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

<TextView
        android:text="@string/credentialing"
        android:layout_width="wrap_content"
        android:fontFamily="@font/source_sans_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/text_view_size_20sp"
        android:layout_height="wrap_content" android:id="@+id/tvSubItemDetailTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
/>
<TextView
        android:text="@string/_23"
        android:fontFamily="@font/source_sans_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/text_view_size_20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSubItemDetailWeight" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
/>
    <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_regular"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_view_size_20sp"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/tvSubItemDetailTitle"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:fontFamily="@font/source_sans_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_size_20sp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/padding_20dp"
            android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/tvSubItemDetailTitle"
            android:layout_marginTop="16dp"
            android:paddingLeft="@dimen/padding_20dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvStatusDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:listitem="@layout/sub_item_desc_list">


    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
            android:id="@+id/fabSubItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/add_stage"
            android:contentDescription="@string/desc"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/rcvStatusDesc"
            app:layout_constraintTop_toBottomOf="@+id/rcvStatusDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>