<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="wrap_content">


    <TextView
            android:text="@string/do_you_want_to_delete_it"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_size_20sp"
            android:fontFamily="@font/source_sans_regular"
            android:textColor="@color/black"
            android:id="@+id/tvDeleteTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>






    <TextView
        android:id="@+id/tvNote"
        android:textSize="@dimen/text_view_size_16sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />


    <TextView
            android:id="@+id/tvYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_semi_bold"
            android:padding="@dimen/padding_10dp"
            android:text="@string/yes"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_size_21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvNo"
            app:layout_constraintTop_toTopOf="@+id/viewButtonHorizontal" />

    <TextView
            android:id="@+id/tvNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/source_sans_semi_bold"
            android:padding="@dimen/padding_10dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="@dimen/text_view_size_21sp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvYes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewButtonHorizontal" />

    <View
        android:id="@+id/viewButtonHorizontal"

        app:layout_constraintTop_toBottomOf="@+id/tvDeleteTitle"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#e5e7e9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <View
        android:id="@+id/viewButtonVertical"

        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#e5e7e9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewButtonHorizontal"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>