<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"

        android:layout_height="wrap_content">


    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_size_20sp"
            android:fontFamily="@font/source_sans_semi_bold"
            android:textColor="@color/black"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

    <View
            android:id="@+id/viewNote"

            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@drawable/view_gradient_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutAddSubItemDescription"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="16dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/viewNote"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddSubItemDescription"
                android:layout_width="match_parent"
                android:textSize="@dimen/edit_text_size_16sp"
                android:imeOptions="actionDone"
                android:inputType="text|textMultiLine"
                android:singleLine="false"
                android:fontFamily="@font/source_sans_semi_bold"
                android:textColor="#8c8888"
                android:maxLines="10"
                android:layout_height="wrap_content"
                android:hint="@string/add_desc" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
            android:id="@+id/tvNote"
            android:textSize="@dimen/text_view_size_16sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />


    <TextView
            android:text="@string/save"
            android:textColor="@color/black"
            android:fontFamily="@font/source_sans_semi_bold"
            android:textSize="@dimen/text_view_size_21sp"
            android:layout_width="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvSaveSubItemDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvCancelSubItemDescription"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/viewButtonHorizontal" />

    <TextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/source_sans_semi_bold"
            android:textSize="@dimen/text_view_size_21sp"
            android:padding="@dimen/padding_10dp"
            android:id="@+id/tvCancelSubItemDescription"
            app:layout_constraintEnd_toStartOf="@+id/tvSaveSubItemDescription"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/viewButtonHorizontal"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    <View
            android:id="@+id/viewButtonHorizontal"

            app:layout_constraintTop_toBottomOf="@+id/inputLayoutAddSubItemDescription"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e7e9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

    <View
            android:id="@+id/viewButtonVertical"

            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#e5e7e9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewButtonHorizontal"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>